--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nschema",
-  "description": "NSchema",
+  "name": "nineschema",
+  "description": "NineSchema",
   "version": "0.0.1",
   "author": "Eduardo Burgos <eburgos@gmail.com>",
   "repository": {
