--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nineschema",
   "description": "NineSchema",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "author": "Eduardo Burgos <eburgos@gmail.com>",
   "repository": {
     "type": "git",
@@ -12,8 +12,7 @@
   "dependencies": {
     "minimist": "^0.2.0",
     "ejs": "^1.0.0",
-    "kew": "^0.4.0",
-    "ninejs": "*"
+    "kew": "^0.4.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
