--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dojoBuild": "./build/dojo.js",
   "dependencies": {
     "ejs": "^1.0.0",
+    "js-yaml": "^3.10.0",
     "kew": "^0.4.0",
     "minimist": "^0.2.0",
     "ninejs": "^0.2.7"
@@ -19,6 +20,7 @@
     "@angular/core": "^4.0.2",
     "@angular/http": "^4.0.2",
     "@types/ejs": "^2.3.33",
+    "@types/js-yaml": "^3.9.1",
     "@types/minimist": "^1.2.0",
     "@types/node": "^6.0.52",
     "blanket": "^1.1.6",
