--- a/package.json
+++ b/package.json
@@ -10,28 +10,27 @@
   "main": "lib/nschema",
   "dojoBuild": "./build/dojo.js",
   "dependencies": {
-    "ejs": "^1.0.0",
+    "@types/node": "^10.7.1",
+    "ejs": "^2.6.1",
     "js-yaml": "^3.10.0",
-    "kew": "^0.4.0",
-    "minimist": "^0.2.0",
-    "ninejs": "^0.2.7"
+    "minimist": "^1.2.0"
   },
   "devDependencies": {
     "@angular/core": "^4.0.2",
     "@angular/http": "^4.0.2",
-    "@types/ejs": "^2.3.33",
+    "@types/ejs": "^2.6.0",
     "@types/js-yaml": "^3.9.1",
     "@types/minimist": "^1.2.0",
-    "@types/node": "^6.0.52",
     "blanket": "^1.1.6",
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-mocha-test": "^0.11.0",
+    "grunt-mocha-test": "^0.13.3",
     "grunt-ts": "^6.0.0-beta.3",
     "load-grunt-tasks": "^3.5.2",
     "rxjs": "^5.3.0",
-    "typescript": "^2.1.4",
+    "tslint": "^5.11.0",
+    "typescript": "^3.0.1",
     "underscore": "^1.6.0"
   },
   "bin": {
@@ -40,7 +39,9 @@
   "component": {
     "scripts": {}
   },
-  "scripts": {},
+  "scripts": {
+    "ts-lint": "npx tslint -p tslint.json"
+  },
   "contributors": [
     "Eduardo Burgos <eburgos@gmail.com> (http://www.eduardoburgos.com/)"
   ],
