--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "name": "nineschema",
   "description": "NineSchema",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "author": "Eduardo Burgos <eburgos@gmail.com>",
   "repository": {
     "type": "git",
     "url": "git://github.com/eburgos/nschema"
   },
   "main": "lib/nschema",
-  "dojoBuild": "./build/dojo.js",
   "dependencies": {
-    "@types/node": "^10.7.1",
+    "@types/node": "^10.9.2",
     "ejs": "^2.6.1",
-    "js-yaml": "^3.10.0",
+    "js-yaml": "^3.12.0",
     "minimist": "^1.2.0"
   },
   "devDependencies": {
@@ -21,17 +20,9 @@
     "@types/ejs": "^2.6.0",
     "@types/js-yaml": "^3.9.1",
     "@types/minimist": "^1.2.0",
-    "blanket": "^1.1.6",
-    "grunt": "^0.4.5",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-mocha-test": "^0.13.3",
-    "grunt-ts": "^6.0.0-beta.3",
-    "load-grunt-tasks": "^3.5.2",
-    "rxjs": "^5.3.0",
+    "rxjs": "^6.2.2",
     "tslint": "^5.11.0",
-    "typescript": "^3.0.1",
-    "underscore": "^1.6.0"
+    "typescript": "^3.0.1"
   },
   "bin": {
     "nschema": "./bin/nschema"
@@ -50,7 +41,6 @@
     "schema",
     "json",
     "services",
-    "ninejs",
     "javascript"
   ],
   "license": "MIT"
