--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "noImplicitAny": true,
     "removeComments": true,
     "preserveConstEnums": true,
-    "sourceMap": true,
+    "sourceMap": false,
     "target": "es6",
     "isolatedModules": false,
     "moduleResolution": "node",
@@ -17,8 +17,8 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "noErrorTruncation": true,
-    "outDir": "build"
+    "outDir": "."
   },
-
+  "include": ["src"],
   "exclude": ["generated", "node_modules"]
 }
