--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "chalk": "^2.4.2",
     "immutability-helper": "^3.0.1",
     "js-yaml": "^3.13.1",
-    "minimist": "^1.2.0"
+    "minimist": "^1.2.0",
+    "prettyjson": "^1.2.1",
+    "tslib": "^1.10.0"
   },
   "devDependencies": {
     "@angular/core": "^4.0.2",
@@ -21,6 +23,7 @@
     "@types/js-yaml": "^3.12.1",
     "@types/minimist": "^1.2.0",
     "@types/node": "^12.7.2",
+    "@types/prettyjson": "^0.0.29",
     "rxjs": "^6.2.2",
     "tslint": "^5.18.0",
     "typescript": "^3.5.1"
