--- a/package.json
+++ b/package.json
@@ -14,19 +14,18 @@
     "js-yaml": "^3.13.1",
     "minimist": "^1.2.0",
     "prettyjson": "^1.2.1",
-    "tslib": "^1.10.0"
+    "tslib": "^1.10.0",
+    "@types/node": "^12.7.2",
+    "@types/prettyjson": "^0.0.29",
+    "@types/js-yaml": "^3.12.1"
   },
   "devDependencies": {
     "@angular/core": "^4.0.2",
     "@angular/http": "^4.0.2",
-    "@types/ejs": "^2.6.3",
-    "@types/js-yaml": "^3.12.1",
     "@types/minimist": "^1.2.0",
-    "@types/node": "^12.7.2",
-    "@types/prettyjson": "^0.0.29",
     "rxjs": "^6.2.2",
     "tslint": "^5.18.0",
-    "typescript": "^3.5.1"
+    "typescript": "^3.5.3"
   },
   "bin": {
     "nschema": "./bin/nschema"
