--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
   },
   "main": "lib/nschema",
   "dependencies": {
+    "@types/js-yaml": "^3.12.1",
+    "@types/node": "^12.7.2",
+    "@types/prettier": "^1.18.2",
+    "@types/prettyjson": "^0.0.29",
     "chalk": "^2.4.2",
     "immutability-helper": "^3.0.1",
     "js-yaml": "^3.13.1",
     "minimist": "^1.2.0",
+    "prettier": "^1.18.2",
     "prettyjson": "^1.2.1",
-    "tslib": "^1.10.0",
-    "@types/node": "^12.7.2",
-    "@types/prettyjson": "^0.0.29",
-    "@types/js-yaml": "^3.12.1"
+    "tslib": "^1.10.0"
   },
   "devDependencies": {
     "@angular/core": "^4.0.2",
