--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
   },
   "main": "lib/nschema",
   "dependencies": {
-    "@types/js-yaml": "^3.12.1",
-    "@types/node": "^12.7.2",
-    "@types/prettier": "^1.18.2",
+    "@types/js-yaml": "^3.12.2",
+    "@types/node": "^13.7.4",
+    "@types/prettier": "^1.19.0",
     "@types/prettyjson": "^0.0.29",
-    "chalk": "^2.4.2",
+    "chalk": "^3.0.0",
     "immutability-helper": "^3.0.1",
     "js-yaml": "^3.13.1",
     "minimist": "^1.2.0",
-    "prettier": "^1.18.2",
+    "prettier": "^1.19.1",
     "prettyjson": "^1.2.1",
     "tslib": "^1.10.0"
   },
@@ -26,8 +26,8 @@
     "@angular/http": "^4.0.2",
     "@types/minimist": "^1.2.0",
     "rxjs": "^6.2.2",
-    "tslint": "^5.18.0",
-    "typescript": "^3.5.3"
+    "tslint": "^6.0.0",
+    "typescript": "^3.7.5"
   },
   "bin": {
     "nschema": "./bin/nschema"
@@ -36,7 +36,9 @@
     "scripts": {}
   },
   "scripts": {
-    "ts-lint": "npx tslint --project tsconfig.json --fix"
+    "ts-lint": "npx tslint --project tsconfig.json --fix",
+    "tsc": "npx tsc",
+    "build": "yarn run tsc && yarn run ts-lint"
   },
   "contributors": [
     "Eduardo Burgos <eburgos@gmail.com> (http://www.eduardoburgos.com/)"
