--- a/package.json
+++ b/package.json
@@ -13,17 +13,16 @@
     "immutability-helper": "^3.0.1",
     "js-yaml": "^3.13.1",
     "prettier": "^2.0.1",
-    "prettyjson": "^1.2.1",
+    "prettify-json": "^1.0.0",
     "tslib": "^1.11.1",
     "yargs": "^15.3.1"
   },
   "devDependencies": {
+    "@angular/core": "^4.0.2",
+    "@angular/http": "^4.0.2",
     "@types/js-yaml": "^3.12.2",
     "@types/node": "^13.9.2",
     "@types/prettier": "^1.19.0",
-    "@types/prettyjson": "^0.0.29",
-    "@angular/core": "^4.0.2",
-    "@angular/http": "^4.0.2",
     "@types/yargs": "^15.0.4",
     "@typescript-eslint/eslint-plugin": "^2.24.0",
     "@typescript-eslint/parser": "^2.24.0",
