--- a/package.json
+++ b/package.json
@@ -9,26 +9,26 @@
   },
   "main": "lib/nschema",
   "dependencies": {
-    "@types/js-yaml": "^3.12.4",
-    "@types/prettier": "^2.0.0",
-    "chalk": "^3.0.0",
-    "immutability-helper": "^3.0.2",
-    "js-yaml": "^3.13.1",
+    "@types/js-yaml": "^3.12.5",
+    "@types/prettier": "^2.0.2",
+    "chalk": "^4.1.0",
+    "immutability-helper": "^3.1.1",
+    "js-yaml": "^3.14.0",
     "prettier": "^2.0.5",
     "prettify-json": "^1.0.0",
-    "redoc": "^2.0.0-rc.29",
+    "redoc": "2.0.0-rc.31",
     "tslib": "^2.0.0",
-    "yargs": "^15.3.1"
+    "yargs": "^15.4.1"
   },
   "devDependencies": {
-    "@types/node": "^14.0.1",
+    "@types/node": "^14.0.23",
     "@types/yargs": "^15.0.5",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
     "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.3",
-    "typescript": "^3.9.2"
+    "eslint-plugin-prettier": "^3.1.4",
+    "typescript": "^3.9.7"
   },
   "bin": {
     "nschema": "./bin/nschema"
