--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "js-yaml": "^3.14.0",
     "prettier": "^2.0.5",
     "prettify-json": "^1.0.0",
-    "redoc": "2.0.0-rc.31",
     "tslib": "^2.0.0",
     "yargs": "^15.4.1"
   },
@@ -29,6 +28,9 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "typescript": "^3.9.7"
+  },
+  "peerDependencies": {
+    "redoc": "2.0.0-rc.31"
   },
   "bin": {
     "nschema": "./bin/nschema"
